--- a/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
+++ b/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Extensions\TaskExtension.cs" />
     <Compile Include="Helpers\ApiHelper.cs" />
     <Compile Include="IChoiceQuery.cs" />
+    <Compile Include="IResourceDbProvider.cs" />
     <Compile Include="Repositories\Implementations\SqlWorkspacesRepository.cs" />
     <Compile Include="Repositories\IWorkspacesRepository.cs" />
     <Compile Include="Migrations\AddReplaceWebAPIWithExportCoreSetting.cs" />
@@ -289,6 +290,7 @@
     <Compile Include="RelativityRdoQuery.cs" />
     <Compile Include="Repositories\ISourceWorkspaceRepository.cs" />
     <Compile Include="Repositories\IWorkspaceRepository.cs" />
+    <Compile Include="ResourceDbProvider.cs" />
     <Compile Include="Resources\Resource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
