REL-109357 Review and update code to get rid of EDDSResource dependencies in RIP

--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
@@ -104,8 +104,8 @@
       <HintPath>..\packages\$(Relativity_API)\lib\net45\Relativity.API.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Relativity.Kepler, Version=1.0.1.226, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Relativity.Kepler.1.0.1.226\lib\net45\Relativity.Kepler.dll</HintPath>
+    <Reference Include="Relativity.Kepler, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\$(Relativity_Kepler)\lib\net45\Relativity.Kepler.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Relativity.Telemetry.DataContracts.Shared">
