Added 1 test to whitelist

--- a/DevelopmentScripts/build.xml
+++ b/DevelopmentScripts/build.xml
@@ -454,6 +454,7 @@
       <DLL type="x64">Source\kCura.IntegrationPoints.ImportProvider.Parser.Tests\bin\x64\kCura.IntegrationPoints.ImportProvider.Parser.Tests.dll</DLL>
     </DLLs>
     <WhiteList>
+      <allow>kCura.IntegrationPoints.Agent.Tests.Tasks.SyncCustodianManagerWorkerTests.Execute_GoldFlow</allow>
     </WhiteList>
   </TestRunner>
   <RAPBuilder>
