--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -4,13 +4,20 @@
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
 	<appSettings>
+		<!-- dev-box machine specific settings-->
+		<!--<add key="ProtocolVersion" value="http"/>-->
+		<!--<add key="targetHost" value="localhost" />-->
+		<!--<add key="databasePassword" value="edds" />-->
+		
+		<!-- test env specific settings-->
+		<add key="ProtocolVersion" value="https"/>
+		<add key="targetHost" value="dv-pol-pl1.testing.corp" />
+		<add key="databasePassword" value="P@ssw0rd@1" />
+		
 		<!-- Service Bus specific app setings for messaging connections -->
-		<add key="ProtocolVersion" value="http"/>
-		<add key="targetHost" value="localhost" />
 		<add key="relativityUserName" value="relativity.admin@kcura.com" />
 		<add key="relativityPassword" value="Test1234!" />
 		<add key="databaseUserId" value="EDDSdbo" />
-		<add key="databasePassword" value="edds" />
 		<add key="connectionStringEDDS" value="data source={0};initial catalog=EDDS;persist security info=False;user id={1};password={2}; workstation id={0};packet size=4096" />
 		<add key="connectionStringWorkspace" value="data source={1}; initial catalog=EDDS{0};persist security info=False;user id={2};password={3}; workstation id={1};packet size=4096" />
 		<add key="relativityUserFirstName" value="Relativity" />
@@ -29,11 +36,13 @@
 		<add key="AdditionalFieldNames" value="Email BCC,Email CC,Email From,Email To" />
 		<add key="LongTextFieldName" value="Extracted Text" />
 		<add key="DestinationPath" value="c:\RIP_ExportTest" />
-		<add key="UseLocalRAP" value="true"/>
+		<add key="UseLocalRAP" value="false"/>
 		<add key="LocalRAPFileLocation" value ="C:\SourceCode\integrationpoints\Applications\RelativityIntegrationPoints.Auto.rap"/>
 	</appSettings>
 	<kCura.Config>
-		<add key="connectionString" value="data source=localhost; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=edds; workstation id=localhost;packet size=4096" />
+		<!-- dev-box machine specific settings-->
+		<!--<add key="connectionString" value="data source=localhost; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=edds; workstation id=localhost;packet size=4096" />-->
+		<add key="connectionString" value="data source=dv-pol-pl1.testing.corp; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=P@ssw0rd@1; workstation id=dv-pol-pl1.testing.corp;packet size=4096" />
 	</kCura.Config>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
