--- a/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
+++ b/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
@@ -207,6 +207,7 @@
     <Compile Include="IEmailBodyData.cs" />
     <Compile Include="IInternalDataSourceProvider.cs" />
     <Compile Include="IPluginProvider.cs" />
+    <Compile Include="IProviderValidator.cs" />
     <Compile Include="ISynchronizerFactory.cs" />
     <Compile Include="Models\ArtifactDTO.cs" />
     <Compile Include="Models\ArtifactFieldDTO.cs" />
