REL-96932 Switch integration tests to PL2

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -11,7 +11,7 @@
 		
 		<!-- test env specific settings-->
 		<add key="ProtocolVersion" value="https"/>
-		<add key="targetHost" value="dv-pol-pl1.testing.corp" />
+		<add key="targetHost" value="dv-pol-pl2.kcura.corp" />
 		<add key="databasePassword" value="P@ssw0rd@1" />
 		
 		<!-- Service Bus specific app setings for messaging connections -->
@@ -42,7 +42,7 @@
 	<kCura.Config>
 		<!-- dev-box machine specific settings-->
 		<!--<add key="connectionString" value="data source=localhost; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=edds; workstation id=localhost;packet size=4096" />-->
-		<add key="connectionString" value="data source=dv-pol-pl1.testing.corp; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=P@ssw0rd@1; workstation id=dv-pol-pl1.testing.corp;packet size=4096" />
+		<add key="connectionString" value="data source=dv-pol-pl2.kcura.corp; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=P@ssw0rd@1; workstation id=dv-pol-pl2.kcura.corp;packet size=4096" />
 	</kCura.Config>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
