UT for Email, Scheduler and Field Map Validators; Fixes in these validators

--- a/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
@@ -284,6 +284,8 @@
     <Compile Include="Services\JobHistory\JobHistoryServiceTest.cs" />
     <Compile Include="Telemetry\ExportTelemetryMetricProviderTest.cs" />
     <Compile Include="Telemetry\TelemetryMangerTest.cs" />
+    <Compile Include="Validation\FieldMappingsValidatorTest.cs" />
+    <Compile Include="Validation\SchedulerValidatorTest.cs" />
     <Compile Include="Validation\EmailValidatorTest.cs" />
   </ItemGroup>
   <ItemGroup>
