--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -4,16 +4,12 @@
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
 	<appSettings>
+		
 		<!-- dev-box machine specific settings-->
-		<!--<add key="ProtocolVersion" value="http"/>-->
-		<!--<add key="targetHost" value="localhost" />-->
-		<!--<add key="databasePassword" value="edds" />-->
-		
-		<!-- test env specific settings-->
 		<add key="ProtocolVersion" value="http"/>
-		<add key="targetHost" value="dv-pol-pl2.kcura.corp" />
-		<add key="databasePassword" value="P@ssw0rd@1" />
-		
+		<add key="targetHost" value="localhost" />
+		<add key="databasePassword" value="edds" />
+				
 		<!-- Service Bus specific app setings for messaging connections -->
 		<add key="relativityUserName" value="relativity.admin@kcura.com" />
 		<add key="relativityPassword" value="Test1234!" />
@@ -41,8 +37,7 @@
 	</appSettings>
 	<kCura.Config>
 		<!-- dev-box machine specific settings-->
-		<!--<add key="connectionString" value="data source=localhost; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=edds; workstation id=localhost;packet size=4096" />-->
-		<add key="connectionString" value="data source=dv-pol-pl2.kcura.corp; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=P@ssw0rd@1; workstation id=dv-pol-pl2.kcura.corp;packet size=4096" />
+		<add key="connectionString" value="data source=localhost; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=edds; workstation id=localhost;packet size=4096" />
 	</kCura.Config>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
