--- a/Source/kCura.IntegrationPoints.Web.Tests.Integration/kCura.IntegrationPoints.Web.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.Web.Tests.Integration/kCura.IntegrationPoints.Web.Tests.Integration.csproj
@@ -95,8 +95,11 @@
     </Compile>
     <Compile Include="Controllers\SavedSearchQueryTests.cs" />
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(Configuration)' == 'Release'">
+    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
