REL-114894 Add infrastructure for Integration Tests for Kepler Services
* Create infrastructure for Integration Tests for Kepler Services
* Add Integration Tests for missing permissions

--- a/DevelopmentScripts/build.xml
+++ b/DevelopmentScripts/build.xml
@@ -307,6 +307,11 @@
             <Platform>x64</Platform>
           </Platforms>
         </Project>
+        <Project path="Source\kCura.IntegrationPoints.Services.Tests.Integration\kCura.IntegrationPoints.Services.Tests.Integration.csproj">
+          <Platforms>
+            <Platform>x64</Platform>
+          </Platforms>
+        </Project>
       </Build>
       <Ignore>
         <Project path="Source\kCura.IntegrationPoints.Documentation\kCura.IntegrationPoints.Documentation.shfbproj" />
