--- a/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
@@ -285,6 +285,7 @@
     <Compile Include="Telemetry\ExportTelemetryMetricProviderTest.cs" />
     <Compile Include="Telemetry\TelemetryMangerTest.cs" />
     <Compile Include="Validation\FieldMappingsValidatorTest.cs" />
+    <Compile Include="Validation\ProviderConfigurationValidatorTest.cs" />
     <Compile Include="Validation\SchedulerValidatorTest.cs" />
     <Compile Include="Validation\EmailValidatorTest.cs" />
   </ItemGroup>
