--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Validation\Parts\ExportFileValidatorTests.cs" />
     <Compile Include="Validation\Parts\FileCountValidatorTests.cs" />
     <Compile Include="Validation\Parts\PaddingValidatorTests.cs" />
+    <Compile Include="Validation\ProviderConfigurationValidatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kCura.IntegrationPoint.Tests.Core\kCura.IntegrationPoint.Tests.Core.csproj">
