Fixed missing Relativity.Logging.Interfaces.dll file

--- a/source/kCura.IntegrationPoints.Agent.Tests.Integration/kCura.IntegrationPoints.Agent.Tests.Integration.csproj
+++ b/source/kCura.IntegrationPoints.Agent.Tests.Integration/kCura.IntegrationPoints.Agent.Tests.Integration.csproj
@@ -78,6 +78,9 @@
       <HintPath>..\packages\$(Relativity_Kepler)\lib\net45\Relativity.Kepler.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Relativity.Logging.Interfaces">
+      <HintPath>..\packages\$(Relativity_Logging_Interfaces)\lib\net45\Relativity.Logging.Interfaces.dll</HintPath>
+    </Reference>
     <Reference Include="Relativity.Services.ServiceProxy, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\$(Relativity_Kepler_Client)\lib\net45\Relativity.Services.ServiceProxy.dll</HintPath>
       <Private>True</Private>
