--- a/Source/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration.csproj
@@ -59,6 +59,9 @@
 		<HintPath>..\packages\$(Relativity_API)\lib\net45\Relativity.API.dll</HintPath>
 		<Private>True</Private>
 	</Reference>
+  <Reference Include="Relativity.Logging.Interfaces">
+      <HintPath>..\packages\$(Relativity_Logging_Interfaces)\lib\net45\Relativity.Logging.Interfaces.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
