--- a/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration.csproj
@@ -45,6 +45,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\$(NUnit)\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Relativity.Logging.Interfaces">
+      <HintPath>..\packages\$(Relativity_Logging_Interfaces)\lib\net45\Relativity.Logging.Interfaces.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
