--- a/Source/kCura.IntegrationPoints.Web.Tests.Integration/kCura.IntegrationPoints.Web.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.Web.Tests.Integration/kCura.IntegrationPoints.Web.Tests.Integration.csproj
@@ -69,6 +69,9 @@
       <HintPath>..\packages\$(RelativityCore)\lib\net45\Relativity.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Relativity.Logging.Interfaces">
+      <HintPath>..\packages\$(Relativity_Logging_Interfaces)\lib\net45\Relativity.Logging.Interfaces.dll</HintPath>
+    </Reference>
     <Reference Include="Relativity.Services.DataContracts, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\$(Relativity_Services_DataContracts)\lib\net45\Relativity.Services.DataContracts.dll</HintPath>
       <Private>True</Private>
